fixed bugs and errors with dispatch strategies